; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_rpc_linux.c_send_bulk.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_rpc_linux.c_send_bulk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i8* }

@KHDISPATCH_CTRL_THRESHOLD = common dso_local global i64 0, align 8
@VCHIQ_SUCCESS = common dso_local global i64 0, align 8
@bulk_event = common dso_local global i32 0, align 4
@VCOS_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i64)* @send_bulk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_bulk(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_3__, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* @KHDISPATCH_CTRL_THRESHOLD, align 8
  %13 = icmp sle i64 %11, %12
  br i1 %13, label %14, label %29

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i8* %15, i8** %16, align 8
  %17 = load i64, i64* %6, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i64 %17, i64* %18, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @get_handle(i32* %19)
  %21 = call i64 @vchiq_queue_message(i32 %20, %struct.TYPE_3__* %7, i32 1)
  store i64 %21, i64* %8, align 8
  %22 = load i64, i64* %8, align 8
  %23 = call i32 @UNUSED_NDEBUG(i64 %22)
  %24 = load i64, i64* %8, align 8
  %25 = load i64, i64* @VCHIQ_SUCCESS, align 8
  %26 = icmp eq i64 %24, %25
  %27 = zext i1 %26 to i32
  %28 = call i32 @vcos_assert(i32 %27)
  br label %51

29:                                               ; preds = %3
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @get_handle(i32* %30)
  %32 = load i8*, i8** %5, align 8
  %33 = load i64, i64* %6, align 8
  %34 = call i32 @rpc_pad_bulk(i64 %33)
  %35 = call i64 @vchiq_queue_bulk_transmit(i32 %31, i8* %32, i32 %34, i32* null)
  store i64 %35, i64* %9, align 8
  %36 = load i64, i64* %9, align 8
  %37 = call i32 @UNUSED_NDEBUG(i64 %36)
  %38 = load i64, i64* %9, align 8
  %39 = load i64, i64* @VCHIQ_SUCCESS, align 8
  %40 = icmp eq i64 %38, %39
  %41 = zext i1 %40 to i32
  %42 = call i32 @vcos_assert(i32 %41)
  %43 = call i64 @vcos_event_wait(i32* @bulk_event)
  store i64 %43, i64* %10, align 8
  %44 = load i64, i64* %10, align 8
  %45 = call i32 @UNUSED_NDEBUG(i64 %44)
  %46 = load i64, i64* %10, align 8
  %47 = load i64, i64* @VCOS_SUCCESS, align 8
  %48 = icmp eq i64 %46, %47
  %49 = zext i1 %48 to i32
  %50 = call i32 @vcos_assert(i32 %49)
  br label %51

51:                                               ; preds = %29, %14
  ret void
}

declare dso_local i64 @vchiq_queue_message(i32, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @get_handle(i32*) #1

declare dso_local i32 @UNUSED_NDEBUG(i64) #1

declare dso_local i32 @vcos_assert(i32) #1

declare dso_local i64 @vchiq_queue_bulk_transmit(i32, i8*, i32, i32*) #1

declare dso_local i32 @rpc_pad_bulk(i64) #1

declare dso_local i64 @vcos_event_wait(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
